        * [CHANGE]: "Invalid database" icon changed, so it's no longer confusing with "Connected" database.
        * [CHANGE]: "Databases" panel cannot be closed/hidden anymore.
        * [CHANGE]: Database dialog modified - now it has 2 "browse" buttons - for existing and for creating new files.
        * [BUGFIX]: #2795 XmlExport plugin: Fixed crash that happend in most exports.
        * [BUGFIX]: XmlExport plugin: Fixed column number attribute incrementing for data rows.
        * [BUGFIX]: #2793 SqlEnterpriseFormatter plugin: Fixed formatting queries starting with EXPLAIN and EXPLAIN QUERY PLAN.
        * [BUGFIX]: #2786 Fixed double plugin names in config dialog for built-in plugins.
        * [BUGFIX]: Fixed dead-lock when fixing path for a database that pointed to inexisting file.
        * [BUGFIX]: Fixed data editing for SQL queries joining the same table several times.
        * [BUGFIX]: Fixed "Ctrl+W"/"Cmd+W" shortcut to work every time, not only every second time.
        * [BUGFIX]: Fixed order of window focusing when closing with "Ctrl+W"/"Cmd+W" shortcut.
        * [BUGFIX]: #2797 Database type is no longer disabled when adding existing database file.
        * [BUGFIX]: SqlExport appends Foreign Key (re)enabling pragma at the end.
        * [BUGFIX]: "Maximized" MDI window state is no longer lost after closing last MDI window.
        * [BUGFIX]: #2812 TableModifier is now much smarter about when to recreate triggers and how to do it.
        * [BUGFIX]: TriggerDialog no longer loses "When" field when editing existing trigger.
        * [BUGFIX]: Columns of Indexes and Triggers tabs in Table Window don't shring after refresh anymore.
        * [BUGFIX]: NumPad Enter key also accepts the Code Assistant choice.
        * [BUGFIX]: Fixed drawing items in SQL code assistant, so they no longer are "black on dark blue" when using classic Windows theme.
        * [BUGFIX]: #2790 Fixed hexadecimal literals evaluation in SQL queries.